log
Thu 28 Mar 2024 02:13:47 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8f0942d
Thu 28 Mar 2024 02:16:43 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:40:6: error: expected identifier or ‘(’ before ‘return’
   40 |      return NULL;
      |      ^~~~~~
list.c:41:1: error: expected identifier or ‘(’ before ‘}’ token
   41 | }
      | ^
Compilation failed
d9d6465
Thu 28 Mar 2024 02:16:53 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
3054496
Thu 28 Mar 2024 02:23:23 PM UTC: 
 list.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f49fd12
Thu 28 Mar 2024 02:26:32 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
82954e8
Thu 28 Mar 2024 02:28:27 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 15/70
ac8b121
Thu 28 Mar 2024 02:45:09 PM UTC: 
 list.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
04ec106
